[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/QuestLog.gd" type="Script" id=1]

[node name="QuestLog" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 52.0
margin_top = 44.0
margin_right = 987.0
margin_bottom = 564.0
color = Color( 0.168627, 0.156863, 0.156863, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 519.0
margin_top = 139.0
margin_right = 895.0
margin_bottom = 358.0
color = Color( 0.321569, 0.301961, 0.301961, 1 )

[node name="QuestList" type="ItemList" parent="."]
margin_left = 132.0
margin_top = 129.0
margin_right = 396.0
margin_bottom = 504.0
custom_colors/guide_color = Color( 0.823529, 0.141176, 0.141176, 1 )
custom_colors/font_color_selected = Color( 0.270588, 0.705882, 0.254902, 1 )
custom_colors/font_color = Color( 0.901961, 0.662745, 0.960784, 1 )

[node name="QuestDescription" type="RichTextLabel" parent="."]
margin_left = 542.0
margin_top = 155.0
margin_right = 876.0
margin_bottom = 341.0

[node name="Label" type="Label" parent="."]
margin_left = 404.0
margin_top = 84.0
margin_right = 494.0
margin_bottom = 98.0
text = "Active Quests"

[node name="Exit" type="Button" parent="."]
margin_left = 871.0
margin_top = 505.0
margin_right = 906.0
margin_bottom = 525.0
text = "Exit"

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
